Bootstrap responsive design

--- a/index.html
+++ b/index.html
@@ -1,110 +1,164 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  </head>
-  <body>
 
-    <!-- NavBar _________________________________________________________________________________________________________________________-->
-    <nav class="navbar navbar-expand-lg bg-light" style="width: 90%; margin: auto;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link disabled">Disabled</a>
-            </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+</head>
+
+<body class="bg-light">
+
+  <!-- NavBar _________________________________________________________________________________________________________________________-->
+
+  <div class="w-100" style="background-color: white;">
+    <nav class="navbar navbar-expand-lg " style="width: 80%; margin: auto;">
+      <div class="container-fluid px-0">
+        <a class="navbar-brand " href="#">Explore the Showcase</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active " aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link disabled">Disabled</a>
           </div>
         </div>
-      </nav>
-      <div class="row " style="width: 90%; margin: auto;">
-        <div class="card col-lg-3 col-md-3 col-sm-4 col-6 px-0">
-            <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-            <div class="p-1" style="display: flex;align-items:center; ">
-              <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-              <p class="card-text p-2">Some quick example.</p>
-            </div>
-          </div>
-
-
-          <div class="card col-lg-3 col-md-3 col-sm-4 col-6 px-0 ">
-            <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-            <div class="p-1" style="display: flex;align-items:center;">
-              <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-              <p class="card-text  p-2">Some quick example.</p>
-            </div>
-          </div>
-
-
-          <div class="card col-lg-3 col-md-3 col-sm-4 col-6 px-0 ">
-            <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-            <div class="p-1" style="display: flex;align-items:center;">
-              <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-              <p class="card-text  p-2">Some quick example.</p>
-            </div>
-          </div>
-
-
-          <div class="card col-lg-3 col-md-3 col-sm-4 col-6 px-0 ">
-            <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-            <div class="p-1" style="display: flex;align-items:center;">
-              <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-              <p class="card-text  p-2">Some quick example.</p>
-            </div>
-          </div>
-
-
-          <div class="card col-lg-3 col-md-3 col-sm-4 col-6 px-0 ">
-            <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-            <div class="p-1" style="display: flex;align-items:center;">
-              <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-              <p class="card-text  p-2">Some quick example.</p>
-            </div>
-          </div>
-
-
-          <div class="card col-lg-3 col-md-3 col-sm-4 col-6 px-0 ">
-            <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-            <div class="p-1" style="display: flex;align-items:center;">
-              <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-              <p class="card-text  p-2">Some quick example.</p>
-            </div>
-          </div>
-
-
-          <div class="card col-lg-3 col-md-3 col-sm-4 col-6 px-0 ">
-            <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-            <div class="p-1" style="display: flex;align-items:center;">
-              <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-              <p class="card-text  p-2">Some quick example.</p>
-            </div>
-          </div>
-
-
-          <div class="card col-lg-3 col-md-3 col-sm-4 col-6 px-0 ">
-            <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-            <div class="p-1" style="display: flex;align-items:center;">
-              <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-              <p class="card-text  p-2">Some quick example.</p>
-            </div>
-          </div>
       </div>
+    </nav>
+  </div>
+
+
+  <div class="w-100 bg-light mb-4">
+    <nav class="navbar navbar-expand-lg bg-light " style="width: 80%; margin: auto;">
+      <div class="container-fluid px-0">
+        <div class="collapse navbar-collapse" id="">
+          <div class="navbar-nav">
+            <a class="nav-link active px-0" aria-current="page" href="#">Recent</a>
+            <a class="nav-link" href="#">Most Liked</a>
+            <a class="nav-link" href="#">Most Viewed</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+  <div class="row " style="width: 80%; margin: auto;">
+    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0">
+      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+      <div class="p-1" style="display: flex;align-items:center; ">
+        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+        <p class="card-text p-2" style="font-size:0.9rem ;">
+          <span>Some quick example.</span><br>
+          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+        </p>
+      </div>
+    </div>
+
+
+    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
+      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+      <div class="p-1" style="display: flex;align-items:center;">
+        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+        <p class="card-text  p-2" style="font-size:0.9rem ;">
+          <span>Somesdf</span><br>
+          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+        </p>
+      </div>
+    </div>
+
+
+    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
+      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+      <div class="p-1" style="display: flex;align-items:center;">
+        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+        <p class="card-text  p-2" style="font-size:0.9rem ;">
+          <span>Some quick example.</span><br>
+          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+        </p>
+      </div>
+    </div>
+
+
+    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
+      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+      <div class="p-1" style="display: flex;align-items:center;">
+        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+        <p class="card-text  p-2" style="font-size:0.9rem ;">
+          <span>Some quick example.</span><br>
+          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+        </p>
+      </div>
+    </div>
+
+
+    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
+      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+      <div class="p-1" style="display: flex;align-items:center;">
+        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+        <p class="card-text  p-2" style="font-size:0.9rem ;">
+          <span>Some quick.</span><br>
+          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+        </p>
+      </div>
+    </div>
+
+
+    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
+      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+      <div class="p-1" style="display: flex;align-items:center;">
+        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+        <p class="card-text  p-2" style="font-size:0.9rem ;">
+          <span>Some quick example.</span><br>
+          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+        </p>
+      </div>
+    </div>
+
+
+    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
+      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+      <div class="p-1" style="display: flex;align-items:center;">
+        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+        <p class="card-text  p-2" style="font-size:0.9rem ;">
+          <span>Some..</span><br>
+          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+        </p>
+      </div>
+    </div>
+
+
+    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
+      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+      <div class="p-1" style="display: flex;align-items:center;">
+        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+        <p class="card-text  p-2" style="font-size:0.9rem ;">
+          <span>Some quick example.</span><br>
+          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+        </p>
+      </div>
+    </div>
+  </div>
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+    crossorigin="anonymous"></script>
 
-  </body>
+</body>
+
 </html>
