--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active " aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link active " aria-current="page" href="#"style="border-bottom:2px solid black ;">Popular</a>
+            <a class="nav-link" href="#">Recent</a>
+            <a class="nav-link" href="#">Cloneable</a>
+            
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
   </div>
 
 
-  <div class="w-100 bg-light mb-4">
+  <div class="w-100 bg-light my-2">
     <nav class="navbar navbar-expand-lg bg-light " style="width: 80%; margin: auto;">
       <div class="container-fluid px-0">
         <div class="collapse navbar-collapse" id="">
