--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active " aria-current="page" href="#"style="border-bottom:2px solid black ;">Popular</a>
+            <a class="nav-link active " aria-current="page" href="#" style="border-bottom:2px solid black ;">Popular</a>
             <a class="nav-link" href="#">Recent</a>
             <a class="nav-link" href="#">Cloneable</a>
-            
+
           </div>
         </div>
       </div>
@@ -49,100 +49,116 @@
   </div>
 
   <div class="row " style="width: 80%; margin: auto;">
-    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0">
-      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-      <div class="p-1" style="display: flex;align-items:center; ">
-        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-        <p class="card-text p-2" style="font-size:0.9rem ;">
-          <span>Some quick example.</span><br>
-          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
-        </p>
+
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 p-2">
+      <div class="card px-0">
+
+        <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+        <div class="p-1" style="display: flex;align-items:center; ">
+          <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+          <p class="card-text p-2" style="font-size:0.9rem ;">
+            <span>Some quick example.</span><br>
+            <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 p-2">
+      <div class="card px-0">
+
+        <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+        <div class="p-1" style="display: flex;align-items:center; ">
+          <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+          <p class="card-text p-2" style="font-size:0.9rem ;">
+            <span>Some quick example.</span><br>
+            <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 p-2">
+      <div class="card px-0">
+
+        <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+        <div class="p-1" style="display: flex;align-items:center; ">
+          <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+          <p class="card-text p-2" style="font-size:0.9rem ;">
+            <span>Some quick example.</span><br>
+            <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 p-2">
+      <div class="card px-0">
+
+        <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+        <div class="p-1" style="display: flex;align-items:center; ">
+          <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+          <p class="card-text p-2" style="font-size:0.9rem ;">
+            <span>Some quick example.</span><br>
+            <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 p-2">
+      <div class="card px-0">
+
+        <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+        <div class="p-1" style="display: flex;align-items:center; ">
+          <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+          <p class="card-text p-2" style="font-size:0.9rem ;">
+            <span>Some quick example.</span><br>
+            <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 p-2">
+      <div class="card px-0">
+
+        <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+        <div class="p-1" style="display: flex;align-items:center; ">
+          <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+          <p class="card-text p-2" style="font-size:0.9rem ;">
+            <span>Some quick example.</span><br>
+            <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 p-2">
+      <div class="card px-0">
+
+        <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+        <div class="p-1" style="display: flex;align-items:center; ">
+          <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+          <p class="card-text p-2" style="font-size:0.9rem ;">
+            <span>Some quick example.</span><br>
+            <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 p-2">
+      <div class="card px-0">
+
+        <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
+        <div class="p-1" style="display: flex;align-items:center; ">
+          <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
+          <p class="card-text p-2" style="font-size:0.9rem ;">
+            <span>Some quick example.</span><br>
+            <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
+          </p>
+        </div>
       </div>
     </div>
 
 
-    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
-      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-      <div class="p-1" style="display: flex;align-items:center;">
-        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-        <p class="card-text  p-2" style="font-size:0.9rem ;">
-          <span>Somesdf</span><br>
-          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
-        </p>
-      </div>
-    </div>
 
 
-    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
-      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-      <div class="p-1" style="display: flex;align-items:center;">
-        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-        <p class="card-text  p-2" style="font-size:0.9rem ;">
-          <span>Some quick example.</span><br>
-          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
-        </p>
-      </div>
-    </div>
-
-
-    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
-      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-      <div class="p-1" style="display: flex;align-items:center;">
-        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-        <p class="card-text  p-2" style="font-size:0.9rem ;">
-          <span>Some quick example.</span><br>
-          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
-        </p>
-      </div>
-    </div>
-
-
-    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
-      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-      <div class="p-1" style="display: flex;align-items:center;">
-        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-        <p class="card-text  p-2" style="font-size:0.9rem ;">
-          <span>Some quick.</span><br>
-          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
-        </p>
-      </div>
-    </div>
-
-
-    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
-      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-      <div class="p-1" style="display: flex;align-items:center;">
-        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-        <p class="card-text  p-2" style="font-size:0.9rem ;">
-          <span>Some quick example.</span><br>
-          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
-        </p>
-      </div>
-    </div>
-
-
-    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
-      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-      <div class="p-1" style="display: flex;align-items:center;">
-        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-        <p class="card-text  p-2" style="font-size:0.9rem ;">
-          <span>Some..</span><br>
-          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
-        </p>
-      </div>
-    </div>
-
-
-    <div class="card col-lg-3 col-md-4 col-sm-6 col-12 px-0 ">
-      <img src="./DSC_2604.JPG" class="card-img-top" alt="...">
-      <div class="p-1" style="display: flex;align-items:center;">
-        <img src="./avatar-2.jpeg" alt="..." class="" style="width:12% ; border-radius: 50%;">
-        <p class="card-text  p-2" style="font-size:0.9rem ;">
-          <span>Some quick example.</span><br>
-          <span><a href="#" style="line-height:2px;">Akoneh Silas M.</a></span>
-        </p>
-      </div>
-    </div>
+   
   </div>
 
 
